# W2UOS-Preview

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  codexReflexivityStrategy_v5.py  config_v5.json  docker-compose.yml
config/: config.dev.toml  config.live-okx-paper.toml  config.live-okx-real-small.toml  config.prod.toml  config.stage.toml  config.toml
docs/: TASK_STATUS_LIVE5_TUI1.md  deployment.md
w2uos-api/: Cargo.toml
w2uos-api/src/: auth.rs  context.rs  lib.rs  server.rs  tests.rs  types.rs
w2uos-backtest/: Cargo.toml
w2uos-backtest/src/: lib.rs
w2uos-bus/: Cargo.toml
w2uos-bus/src/: lib.rs
w2uos-config/: Cargo.toml
w2uos-config/src/: lib.rs
w2uos-dashboard/: Cargo.toml  tailwind.config.js
w2uos-dashboard/src/: app.rs  lib.rs  panels.rs
w2uos-dashboard/static/: index.html
w2uos-data/: Cargo.toml
w2uos-data/src/: binance.rs  history.rs  lib.rs  okx.rs  service.rs  types.rs
w2uos-data/tests/: okx_live_mode.rs
w2uos-exec/: Cargo.toml
w2uos-exec/src/: binance.rs  lib.rs  okx.rs  service.rs  types.rs
w2uos-kernel/: Cargo.toml
w2uos-kernel/src/: cluster.rs  config_manager.rs  lib.rs  risk_config.rs  risk_supervisor.rs  strategy_host.rs
w2uos-log/: Cargo.toml
w2uos-log/src/: lib.rs  service.rs  sink.rs  tests.rs  types.rs
w2uos-net/: Cargo.toml
w2uos-net/src/: client.rs  config.rs  lib.rs  traffic.rs
w2uos-node/: Cargo.toml
w2uos-node/src/: main.rs
w2uos-service/: Cargo.toml
w2uos-service/src/: lib.rs
w2uos-tui/: Cargo.toml
w2uos-tui/src/: main.rs
wru-strategy/: Cargo.toml
wru-strategy/src/: lib.rs  types.rs
