[workspace]
members = [
    "w2uos-kernel",
    "w2uos-bus",
    "w2uos-data",
    "w2uos-exec",
    "w2uos-log",
    "w2uos-api",
    "w2uos-node",
    "w2uos-dashboard",
    "w2uos-net",
    "w2uos-backtest",
    "wru-strategy",
    "w2uos-service",
    "w2uos-config",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream", "gzip", "brotli"] }
uuid = { version = "1", features = ["serde", "v4"] }
