[package]
name = "w2uos-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
sha2 = "0.10"
w2uos-net = { path = "../w2uos-net" }
w2uos-data = { path = "../w2uos-data" }
w2uos-exec = { path = "../w2uos-exec" }
wru-strategy = { path = "../wru-strategy" }

[dev-dependencies]
tempfile = "3"
