[package]
name = "w2uos-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
w2uos-bus = { path = "../w2uos-bus" }
w2uos-data = { path = "../w2uos-data" }
w2uos-log = { path = "../w2uos-log" }
w2uos-net = { path = "../w2uos-net" }
w2uos-service = { path = "../w2uos-service" }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
hex = "0.4"
