[package]
name = "w2uos-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde", "clock"] }
crossterm = "0.27"
ratatui = "0.26"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
